terraform/main.tf
terraform {
  required_version = ">= 1.5.0"
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = ">= 5.0"
    }
  }
}

provider "aws" {
  region = var.region
}


data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

resource "aws_key_pair" "deployer" {
  key_name   = var.key_name
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC6H/MWSmBYrw/oAi5VNgOuGxnDamufgfjVQ75jXBxKIN9g7dOltPSaDhL9U+wRqnf4kclvVR9WSU8siYi4M83f2SJ0weGrLwpnbfmt2IhAFARStcFrqN6XVAYTJrfhKzsBHapqYeClgi/aU40xgG7qYADVlwLOiGg6jR6LjDY2fgn4TuNFa4jJQM+ZPTn3Nxy4m8gytxhgG2Ip5tP3Emk+++kO29+2/OLfVvwhl2EKuXQrLcPQyDoGkh081wm9imQUU146O0I2xqevkMwXEQKrSdWyrRxwL6CxCFw6Kmbwz4jzVO2fl1MjLMggZPFk0v7AwHpEhVcZNDyg8zaHGiDd"
}

resource "aws_security_group" "ai_app_sg" {
  name        = "ai-app-sg"
  description = "Allow SSH and HTTP"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "vm" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  subnet_id                   = element(data.aws_subnets.default.ids, 1)
  vpc_security_group_ids      = [aws_security_group.ai_app_sg.id]
  associate_public_ip_address = true
  key_name                    = var.key_name

  root_block_device {
    volume_size = 30
  }

  tags = {
    Name = var.instance_name
  }
}

output "public_ip" {
  value = aws_instance.vm.public_ip
}
